--- a/SpringWebApp/pom.xml
+++ b/SpringWebApp/pom.xml
@@ -49,19 +49,33 @@
 	    <version>1.2</version>
 	</dependency>
 	
-	<!-- database dependencies -->
+	<!-- JDBC -->
 	<dependency>
 	    <groupId>org.springframework</groupId>
 	    <artifactId>spring-jdbc</artifactId>
 	    <version>4.0.3.RELEASE</version>
 	</dependency>
-	
+	<!--  
 	<dependency>
 	    <groupId>mysql</groupId>
 	    <artifactId>mysql-connector-java</artifactId>
 	    <version>5.1.6</version>
 	</dependency>
+	-->
+	<!-- hibernate -->
+    <dependency>
+        <groupId>org.hibernate</groupId>
+        <artifactId>hibernate-core</artifactId>
+        <version>4.1.4.Final</version>
+    </dependency>
 
+    <!-- SQLite -->
+    <dependency>
+        <groupId>org.xerial</groupId>
+        <artifactId>sqlite-jdbc</artifactId>
+        <version>3.7.2</version>
+    </dependency>
+    
   </dependencies>
   
   <build>
